# dicom-reader

./: README.md
data_bu/: CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.1.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.10.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.100.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.101.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.102.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.103.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.104.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.105.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.106.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.107.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.108.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.109.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.11.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.110.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.111.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.112.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.113.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.114.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.115.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.116.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.117.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.118.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.119.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.12.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.120.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.121.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.122.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.123.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.124.dcm  CT.1.2.840.113619.2.55.3.3179473588.437.1514550376.771.125.dcm  (+120 more)
src/: CMakeLists.txt  main.cxx  stylesheet.qss  ui.h
